--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 The most important ideas behind my campaign are explained in the first few 90-second videos.<br>
 I will be posting more short videos on Youtube and social media between now and the election going into specifics, and you can follow me there using the links above.</p>
 
-<p>Here is the first 90 second video introducing one of the core ideas behind my campaign:</p>
+<p>Here is the first 90-second video introducing one of the core ideas behind my campaign:</p>
 
 <iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -170,7 +170,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Use the platform of parliament to better advocate for our state and our electorate;</li>
  </ul>
 
- <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the state parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.</p>
+ <p>Perhaps even more importantly, whether I win or not, your vote will send a message to the State Parliament, the federal parliament, and potential candidates across Australia about the quality of policy thinking, problem solving and political system that Australians want to see.</p>
 
  <p>The only thing we need to solve all of the above crises is better policy,<br>
  and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
@@ -190,7 +190,7 @@ I will be posting more short videos on Youtube and social media between now and 
  
  <p>Together we can send a message to both federal and state governments that if they won't do their job well enough, we'll elect someone who will. At the same time, we can send a message to independent policy thinkers in the community that we will support them if they run for office. Together, these two messages will result in a government that is much more accountable, that tries much harder to solve our problems, and has the necessary policy skills to do so.</p>
  <p>Sometimes it seems like many of our politicians aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; choose policies that mitigate some problems while making other problems worse, or throw a lot of money at something in a way that barely addresses any problems at all. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
- <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
+ <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of State Parliament to do my part in both.</p>
  <p>By the election in March, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
  <p>If you follow me on social media or video platforms, you can see my videos and perhaps even share them around. This would be a great help, as would sharing this website with whoever you think might be interested.</p>
  <p>If you would like to donate, I can legally take donations of up to $5000, but even a few dollars would help, so email me if you'd like to donate. I'll be competing with people who are allowed to spend up to $100&#8239;000 on their campaign.</p>
@@ -224,7 +224,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>the right internal leaders;</li>
   <li>and the right amount of funding.</li>
  </ul>
- <p>If politicians just did this one job well enough, government departments would be collaborating with others, including non-departmental experts and the general public, to do all of the other necessary policy making with integrity, with politicians providing the oversight to ensure that their work is aligned with democratic preferences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
+ <p>If politicians just did this one job well enough, government departments would be collaborating with others, including non-departmental experts and the general public, to do all of the other necessary policy-making with integrity, with politicians providing the oversight to ensure that their work is aligned with democratic preferences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
 
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
 
@@ -435,9 +435,9 @@ I will be posting more short videos on Youtube and social media between now and 
 
  <h3 id="Why_Federal_Policies">Why I have federal policies too</h3>
 
-<p>What is the point of having federal policies as an independent running for state parliament?</p>
+<p>What is the point of having federal policies as an independent running for State Parliament?</p>
 
-<p>Unlike other politicians, I will use state parliament as a platform to:</p>
+<p>Unlike other politicians, I will use State Parliament as a platform to:</p>
 <ul>
  <li>Advocate for what we need at the federal level;</li>
  <li>Support people with similar policy principles to run as independent candidates at federal elections, and help them with their policies.</li>
@@ -509,7 +509,6 @@ I will be posting more short videos on Youtube and social media between now and 
  <li>Introduce penalty rates for those working over 30 hours a week;</li>
  <li>Increase penalty rates for those working night shifts or having to commute at rush hour;</li>
 </ul>
-</p>
 
 <p>Ensure that gig workers are paid at least minimum wage after expenses.</p>
 
@@ -547,7 +546,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <small>(3.0_Assist_Buyers)</small>
 </h4>
 
-<p>Assist prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
+<p>Assist prospective homeowners by allowing zero-interest or low-interest loans for the buyer.</p>
 
 <p>My policies will prevent this from excessively inflating housing prices further for two reasons:</p>
  <ul>
@@ -628,7 +627,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Luckily we have big corporations with large profit margins that can afford to pay, along with hundreds, perhaps thousands, of decamillionaires. We also don't charge corporations and other countries enough for our finite natural resources such as minerals. South Australia has more money coming in from minerals (per capita) than Victoria, New South Wales, the ACT or Tasmania. These sources and other large export industries provide us with an ample base to generate revenue while reducing costs for ordinary South Australians.</p>
 
-<p>However, Western Australia exports far more of our finite natural resources than any other state, so ideally we also want the federal government to charge for these resources, and provide states with the funding we need to solve the crises we are facing. Unlike most other politicians, I have the independence necessary to use state parliament as a platform to call on the federal government for the funding we desperately need.</p>
+<p>However, Western Australia exports far more of our finite natural resources than any other state, so ideally we also want the federal government to charge for these resources, and provide states with the funding we need to solve the crises we are facing. Unlike most other politicians, I have the independence necessary to use State Parliament as a platform to call on the federal government for the funding we desperately need.</p>
 
 <p>In the meantime, we need to charge for our own export resources in order to fund the solutions to the crises locally. You can read more about this in the article "Paying for good policy" underneath the policy section.</p>
 
@@ -640,7 +639,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>In fact, some of the crises we are facing are so dire, that borrowing money in order to fix them is actually good fiscal policy. But relying on debt more than we need to is irresponsible, and underfunding from the federal government is largely to blame.</p>
 
-<p>The federal government gives our natural resources away to corporations without charging properly for them, fails to adequately tax billionaires and decamillionaires, and then fails to provide struggling states like South Australia with adequate funding for our desperately failing services. I will use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
+<p>The federal government gives our natural resources away to corporations without charging properly for them, fails to adequately tax billionaires and decamillionaires, and then fails to provide struggling states like South Australia with adequate funding for our desperately failing services. I will use the platform of State Parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
 
 <h4 id="8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free<br>
  <small>(8.0_Resource_Pricing)</small>
@@ -726,7 +725,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <li>11.1.2 Prevent businesses from employing illegal workers.</li>
  <li>11.1.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
  <li>11.1.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
- <li>11.2 Use the platform of state parliament to call on the federal government to take action to:
+ <li>11.2 Use the platform of State Parliament to call on the federal government to take action to:
   <ul>
    <li>11.2.1 Crack down on businesses that employ illegal workers.</li>
    <li>11.2.2 Require all visitors on temporary visas to have a return ticket booked.</li>
@@ -1029,7 +1028,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>We also need to address what is fundamentally broken in our major parties. If a major party cannot be fixed, it needs to be replaced by independents, and if necessary by new political parties, that are designed to hold politicians accountable to their electorates, rather than pushing some other agenda of the party or its donors.</p>
 
-<p>If I am elected, I won't be resigned to what I can do within state parliament to influence state policy as a single MP. I will use the platform of state parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.</p>
+<p>If I am elected, I won't be resigned to what I can do within State Parliament to influence state policy as a single MP. I will use the platform of State Parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.</p>
 
 <iframe width="381" height="677" src="https://www.youtube.com/embed/G2Lg5Om-VMo" title="Announcing my campaign as an Independent for Waite #southaustralia #auspol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
