--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <iframe width="388" height="690" src="https://www.youtube.com/embed/krxN7ERG89U" title="4 million more people in just 10 years?! #immigration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>Australia's population is projected to grow by 4 million over the next 10 years.</p>
+<p>Australia's population is projected to grow by 4 million over the next 10 years, according to <a href="https://population.gov.au/sites/population.gov.au/files/2026-01/population-statement-2025.pdf">the government's own report</a></p>
 
 <p>The left are currently empowering racist, xenophobic, anti-progressive, anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
