--- a/index.html
+++ b/index.html
@@ -736,11 +736,8 @@ I will be posting more short videos on Youtube and social media between now and 
    <li>11.2.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
    <li>11.2.8 Require the ABS to measure and report net arrivals in addition to the existing net migration data.</li>
    <li>11.2.9 Advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
-  </li>
-  <li>11.3 Once immigration numbers have been adequately reduced, stop charging for emergency medical care for anyone who really needs to be here.</li>
   </ul>
- </li>
- 
+  <li>11.3 Once immigration numbers have been adequately reduced, stop charging for emergency medical care for anyone who really needs to be here.</li>
 </ul>
 
 <p>The South Australian Employment Service (SAES) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
@@ -842,7 +839,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <li id="17.1.4_Address_End">17.1.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, e.g. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
  <li id="17.1.5_Electorate_statistics">17.1.5 Provide the South Australian branch of the ABS with enough funding to gather and publish data on what each South Australian state electorate wants from government, and what experts support. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
  <li id="17.1.6_True_Proportional">17.1.6 Create truly proportional representation in the upper house, with the voting power of each member of the house being proportional to the number of votes that they received as an individual, preventing the undemocratic redistribution of votes to less preferred individuals. In this house, only the candidates names will be shown, not their party, and candidates will not be grouped by party, eliminating the bias in favour of political parties.</li>
- <li id="17.1.7_End_Party_Endorsement">Eliminate the formalisation of "endorsed candidates" in the lower house (and if possible political party advertising), creating a level playing field by requiring all candidates to run as indpendents under their name only.</li>
+ <li id="17.1.7_End_Party_Endorsement">Eliminate the formalisation of "endorsed candidates" in the lower house (and if possible political party advertising), creating a level playing field by requiring all candidates to run as independents under their name only.</li>
  <!-- <li>17.X Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li> -->
 </ul>
 
@@ -954,7 +951,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
 
-<h4 href="#19.7_Women's_Leave">Women's leave<br>
+<h4 id="19.7_Women's_Leave">Women's leave<br>
  <small>(19.7_Women's_Leave)</small>
 </h4>
 
