--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ I will be posting more short videos on Youtube and social media between now and 
     <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, and a PBS-like system of regulation and compensation</a> (1.2)
    </li>
    <li>
-    <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</a> (1.3)
+    <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500&#8239;000 per year (or more than ten times above the median average income).</a> (1.3)
    </li>
    <li>
     <a href="#1.4_Wages">
@@ -456,7 +456,7 @@ I will be posting more short videos on Youtube and social media between now and 
    <a href="#8.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free;</a> (8.0)
   </li>
   <li>
-   <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income);</a> (1.3)
+   <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500&#8239;000 per year (or more than ten times above the median average income);</a> (1.3)
   </li>
   <li>
    <a href="#2.0_RBA_Reform">Reduce cost of living and interest rates by giving the Reserve Bank other ways to control inflation, like charging multinationals and those earning more than a million per year for inflationary behaviour;</a> (2.0)
@@ -494,7 +494,7 @@ I will be posting more short videos on Youtube and social media between now and 
 <small>(1.3_Taxes)</small>
 </h4>
 
-<p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</p>
+<p>Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500&#8239;000 per year (or more than ten times above the median average income).</p>
 
 <p>The tax system should be designed to prevent individuals from earning more than 10 times more in net lifetime income than the median lifetime income, and if they have already earned more than this in net income, their assets should be taxed if necessary to compensate.<br>
 </p>
@@ -708,7 +708,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <iframe width="388" height="690" src="https://www.youtube.com/embed/krxN7ERG89U" title="4 million more people in just 10 years?! #immigration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>Australia's population is projected to grow by 4 million over the next 10 years, according to <a href="https://population.gov.au/sites/population.gov.au/files/2026-01/population-statement-2025.pdf">the government's own report</a>. Most of this is either people who come in on skilled visas or the family that they subsequently bring over. Very few are refugees and their family members. The birth rate per year is also more than 100 000 higher than the death rate as a result.</p>
+<p>Australia's population is projected to grow by 4 million over the next 10 years, according to <a href="https://population.gov.au/sites/population.gov.au/files/2026-01/population-statement-2025.pdf">the government's own report</a>. Most of this is either people who come in on skilled visas or the family that they subsequently bring over. Very few are refugees and their family members. The birth rate per year is also more than 100&#8239;000 higher than the death rate as a result.</p>
 
 <p>The left are currently empowering racist, xenophobic, anti-progressive, anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
