--- a/index.html
+++ b/index.html
@@ -803,15 +803,19 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrates to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
 
+<p>Australia and South Australia currently only measure local emissions, which includes emissions caused overseas by our imports and exports. We need to also:</p>
+
+<p>14.1.4 Measure total embodied emissions, which includes emissions caused overseas by our imports and exports, and set a target for reducing this, making reductions in this number the priority.</p>
+
 <h5>Global action</h5>
 
 <p>There are two way to influence the climate crisis on a global scale.</p>
 <ul>
- <li>14.1 Leadership. Demonstrate to the world that pollution can be reduce in a beneficial way, so that they want to follow our lead, or need to follow our lead to stay competetive.</li>
- <li>14.2 Coordination. Work with other countries to develop global incentives such as tax incentives and other incentives in order to motivate all countries to take adequate action.</li>
+ <li>14.2.1 Leadership. Demonstrate to the world that pollution can be reduce in a beneficial way, so that they want to follow our lead, or need to follow our lead to stay competetive.</li>
+ <li>14.2.2 Coordination. Work with other countries to develop global incentives such as tax incentives and other incentives in order to motivate all countries to take adequate action.</li>
 </ul>
 
-<p>14.1 In South Australia, where we have already lead the world in solar and wind power, the next step, along with stabilising the grid and reducing electricity prices, is to lead the world in reducing climate crisis pollution from other sectors, including from transport and agriculture (the two main pollution sectors in South Australia) as detailed in the "Local action" section above.</p>
+<p>14.2 In South Australia, where we have already lead the world in solar and wind power, the next step, along with stabilising the grid and reducing electricity prices, is to lead the world in reducing climate crisis pollution from other sectors, including from transport and agriculture (the two main pollution sectors in South Australia) as detailed in the "Local action" section above.</p>
 
 <h4 id="15.0_Belair_Train">Improve the Belair train line<br>
  <small>(15.0_Belair_Train)</small>
