--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 <section id="intro" class="content-section responsive-width">
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
- I've been preparing for this job since I was 19, and I'm now 37.<br>
- For the last 18 years I've been doing the deep thinking that is lacking from parliament,<br>
+ I was born at Blackwood hospital and have spent almost all of my life in Waite.<br>
+ I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.</p>
 
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
-The most important ideas behind my campaign are explained in the first few 90-second videos.<br>
+The most important ideas behind my campaign are explained in the 90-second videos that are found here and on my social media accounts.<br>
 I will be posting more short videos on Youtube and social media between now and the election going into specifics, and you can follow me there using the links above.</p>
 
 <p>Here is the first 90-second video introducing one of the core ideas behind my campaign:</p>
