--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
  I was born at Blackwood hospital and have spent almost all of my life in Waite.<br>
- I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
+ I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.</p>
 
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
