--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>There are two way to influence the climate crisis on a global scale.</p>
 <ul>
- <li>14.2.1 Leadership. Demonstrate to the world that pollution can be reduce in a beneficial way, so that they want to follow our lead, or need to follow our lead to stay competetive.</li>
+ <li>14.2.1 Leadership. Demonstrate to the world that pollution can be reduce in a beneficial way, so that they want to follow our lead, or need to follow our lead to stay competitive.</li>
  <li>14.2.2 Coordination. Work with other countries to develop global incentives such as tax incentives and other incentives in order to motivate all countries to take adequate action.</li>
 </ul>
 
