--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
  I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.</p>
 
+<p>An article about me and other independents running in South Australia will be published soon by InDaily.</p>
+
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
 The most important ideas behind my campaign are explained in the 90-second videos that are found here and on my social media accounts.<br>
 I will be posting more short videos on Youtube and social media between now and the election going into specifics, and you can follow me there using the links above.</p>
