--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
 
 <section id="intro" class="content-section responsive-width">
 
+<iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
- I was born at Blackwood hospital and have spent almost all of my life in Waite.<br>
+ I was born at Blackwood hospital in 1988 and have spent almost all of my life in Waite.<br>
  I attended the University of Adelaide, and have a BA and two graduate certificates, one in International Security and the other in Data Science.<br> On top of this I've spent an additional 15 years teaching myself other relevant skills and knowledge, and doing the deep thinking that is lacking from parliament,<br>
  and now I have a plan.</p>
 
@@ -129,9 +131,9 @@
 The most important ideas behind my campaign are explained in the 90-second videos that are found here and on my social media accounts.<br>
 I will be posting more short videos on Youtube and social media between now and the election going into specifics, and you can follow me there using the links above.</p>
 
-<p>Here is the first 90-second video introducing one of the core ideas behind my campaign:</p>
+<p>Here is another 90-second video introducing some of the core ideas behind my campaign:</p>
 
-<iframe width="366" height="651" src="https://www.youtube.com/embed/f0h3xgmld5s" title="Hi. Here&#39;s another hill rant about why I&#39;m running as an Independent for Waite (mostly Mitcham)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="381" height="677" src="https://www.youtube.com/embed/SZbqgZ-uG1Q" title="Happy New Year to everyone especially Waite, Mitcham and Adelaide." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>You can also listen to a podcast version of the first part of an older version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.</p>
 
@@ -201,6 +203,9 @@ I will be posting more short videos on Youtube and social media between now and 
  <br>
  Alec Gargett
  </p>
+
+ <iframe width="388" height="690" src="https://www.youtube.com/embed/OqG9yTY5HqA" title="Every South Australian crisis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ 
  </section>
 
  <section id="whydetail" class="content-section responsive-width">
@@ -239,7 +244,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
 
-<iframe width="381" height="677" src="https://www.youtube.com/embed/SZbqgZ-uG1Q" title="Happy New Year to everyone especially Waite, Mitcham and Adelaide." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="381" height="677" src="https://www.youtube.com/embed/G2Lg5Om-VMo" title="Announcing my campaign as an Independent for Waite #southaustralia #auspol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </section> <!-- /whydetail -->
      
@@ -1032,8 +1037,6 @@ I will be posting more short videos on Youtube and social media between now and 
 <p>We also need to address what is fundamentally broken in our major parties. If a major party cannot be fixed, it needs to be replaced by independents, and if necessary by new political parties, that are designed to hold politicians accountable to their electorates, rather than pushing some other agenda of the party or its donors.</p>
 
 <p>If I am elected, I won't be resigned to what I can do within State Parliament to influence state policy as a single MP. I will use the platform of State Parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.</p>
-
-<iframe width="381" height="677" src="https://www.youtube.com/embed/G2Lg5Om-VMo" title="Announcing my campaign as an Independent for Waite #southaustralia #auspol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </section> <!-- beyondpolicy -->
 <!-- <section id="about" class="content-section responsive-width">
