--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ I will be posting more short videos on Youtube and social media between now and 
  </p>
 
  <iframe width="388" height="690" src="https://www.youtube.com/embed/OqG9yTY5HqA" title="Every South Australian crisis" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- 
+
  </section>
 
  <section id="whydetail" class="content-section responsive-width">
@@ -1049,7 +1049,11 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <section id="experience" class="content-section responsive-width">
 
-<h2>Am I experienced enough?</h2>
+<h2>More about me</h2>
+
+<p>
+ 18 years ago, during my first year at the University of Adelaide, I realised I wanted to develop the skills and knowledge necessary to solve our problems at a societal level, and that my maths and physics classes weren't doing much of that. By the time I graduated with a Bachelor of Arts, a Graduate certificate in International Security and a Graduate Certificate in Data Science, I realised that university education wasn't going to be enough, nor was any paid job going to teach me the necessary skills and knowledge to solve societal-level problems. Luckily I cared about this more than about money, and spent the next 14 years developing my critical thinking and problem solving skills further, and my knowledge on a wide range of relevant topics. While the rest of parliament have plenty of experience, the specific type of preparation that I have is greatly lacking.
+</p>
 
 <iframe width="382" height="679" src="https://www.youtube.com/embed/Qf22wA-NNSs" title="Am I experienced enough to be a good independent for Waite?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
