--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Australia and South Australia currently only measure local emissions, which includes emissions caused overseas by our imports and exports. We need to also:</p>
 
-<p>14.1.4 Measure total embodied emissions, which includes emissions caused overseas by our imports and exports, and set a target for reducing this, making reductions in this number the priority.</p>
+<p>14.1.5 Measure total embodied emissions, which includes emissions caused overseas by our imports and exports, and set a target for reducing this, making reductions in this number the priority, and influencing other countries to do the same.</p>
 
 <h5>Global action</h5>
 
